[project]
name = "cogniac"
version = "3.0.1"
description = "Python SDK for Cogniac Public API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.24.0",
    "tenacity>=8.0.0",
    "tabulate",
]
authors = [
    { name = "Cogniac Corporation", email = "support@cogniac.co" },
]

[project.urls]
Homepage = "https://github.com/Cogniac/cogniac-sdk-py"

[project.scripts]
cogniac = "cogniac.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
]

[tool.setuptools]
packages = ["cogniac"]
script-files = ["bin/icogniac", "bin/cogupload", "bin/cogstats"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
